# resume-parser-framework

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
examples/: basic_pdf_example.py  basic_word_example.py  sample_resume.docx
resumes/: .gitkeep
src/resume_parser/: __init__.py  framework.py  resume_extractor.py
src/resume_parser/extractors/: __init__.py  base.py  config.py  email_extractor.py  name_extractor.py  skills_extractor.py
src/resume_parser/models/: __init__.py  resume_data.py
src/resume_parser/parsers/: __init__.py  base.py  factory.py  pdf_parser.py  word_parser.py
tests/fixtures/: README.md  __init__.py  create_fixtures.py
tests/unit/: test_basic.py  test_extractors.py  test_framework.py  test_models.py  test_parsers.py  test_resume_extractor.py
